--- a/ps/index.html
+++ b/ps/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="style.css">
   <title>Tudo Pronto!</title>
-</head>
 
-  <!-- Meta Pixel Code -->
+    <!-- Meta Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -18,13 +17,14 @@
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
   fbq('init', '595325282050325');
-  fbq('track', 'AddToCard');
+  fbq('track', 'AddtoCard');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=595325282050325&ev=AddToCard&noscript=1"
+  src="https://www.facebook.com/tr?id=595325282050325&ev=AddtoCard&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
   
+  </head>  
   <body> 
   <div class="container">
     <div class="black">
